<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.NewPostActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        android:fitsSystemWindows="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/margin_post_field_top">

            <LinearLayout
                android:id="@+id/linearLayoutFocus"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:focusable="true"
                android:orientation="horizontal"
                android:focusableInTouchMode="true"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtPostTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_post_field_top"
                android:theme="@style/TextInputLayoutAppearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPostTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_post_title"
                    android:maxLength="@integer/post_title_max_length"
                    android:inputType="textCapWords"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtPostTitleCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:visibility="gone"
                android:textSize="@dimen/post_field_txt_size"
                android:textColor="@color/colorHint"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtPostDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_marginTop="@dimen/margin_post_field_top">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPostDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="@integer/post_description_max_length"
                    android:hint="@string/describe_your_post"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtPostDescCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:visibility="gone"
                android:textSize="@dimen/post_field_txt_size"
                android:textColor="@color/colorHint"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_marginTop="@dimen/margin_post_field_top">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:drawableEnd="@drawable/ic_border_all"
                    android:hint="@string/select_post_categories"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutAppearance"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/margin_post_field_top">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/budget"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:theme="@style/TextInputLayoutAppearance"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="@dimen/margin_post_field_top">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etInr"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/inr"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                           android:paddingLeft="50dp"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_centerVertical="true"
                            android:focusable="false"
                            android:focusableInTouchMode="false">

                            <ImageView
                                android:id="@+id/imgCountry"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/in"/>

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_arrow_drop_down"/>

                        </LinearLayout>

                    </RelativeLayout>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutAppearance"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/margin_post_field_top">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etRate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/rate"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/TextInputLayoutAppearance"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="@dimen/margin_post_field_top">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etPaymentMethod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/payment_method"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_marginTop="@dimen/margin_post_field_top">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPostLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/post_location"
                    android:focusable="false"
                    android:drawableEnd="@drawable/ic_place"
                    android:focusableInTouchMode="false"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutAppearance"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/margin_post_field_top">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/start_date"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/TextInputLayoutAppearance"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="@dimen/margin_post_field_top">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etJobTerm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/job_term"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_attachments"
                android:textSize="@dimen/post_field_txt_size"
                android:layout_marginTop="@dimen/margin_post_field_top"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/dp_5"
                android:background="#f1f1f1">

                <ImageView
                    android:id="@+id/imgAddAttachment"
                    android:layout_width="@dimen/attachment_size"
                    android:layout_height="@dimen/attachment_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/rounded_shape"
                    android:src="@drawable/ic_add_black"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rcAttachment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>